Feature/Skills Frontend create, update e delete

--- a/Frontend/Components/Layout/NavMenu.razor
+++ b/Frontend/Components/Layout/NavMenu.razor
@@ -27,6 +27,9 @@
             <NavLink class="nav-link" href="user-info">
                 👨‍💼 User Profile
             </NavLink>
+            <NavLink class="nav-link" href="SkillManagement">
+                🛠️ Skills
+            </NavLink>
         </div>
     </nav>
 </div>
