Created page to add user but btn not working yet

--- a/Frontend/Components/Layout/MainLayout.razor
+++ b/Frontend/Components/Layout/MainLayout.razor
@@ -9,7 +9,7 @@ Nav.ToBaseRelativePath(Nav.Uri)
 .ToLowerInvariant();
 
 // Mostra o sidebar em tudo que não for a página de login
-private bool ShowSidebar => RelativePath != "";
+private bool ShowSidebar => RelativePath != "" && RelativePath != "create-account";
 }
 
 <div class="page">
